--- a/datos.html
+++ b/datos.html
@@ -77,7 +77,7 @@
                                     <h2>Dayana Díaz</h2>
                                 </div>
                                 <div class="cont-text">
-                                    <p>Disruta dibujar y aprender nuevas tecnicas,<br>
+                                    <p>Disfruta dibujar y aprender nuevas tecnicas,<br>
                                         se interesa mucho por la ilustración y <br>
                                         lo que se puede expresar con ella.<br>
                                         Le gusta escribir aunque no lo hace<br>
